Remove commons-httpclient dependency (and hence jackrabbit)